Fixing hero background for proper bleed.

--- a/css/styles.less
+++ b/css/styles.less
@@ -197,7 +197,7 @@ nav.navbar {
 }
 
 #hero-text {
-  background: #262324 url('http://developer.ibm.com/clouddataservices/wp-content/uploads/sites/47/2015/06/cds_clouds_hero.png') no-repeat;
+  background: #231f20 url('http://developer.ibm.com/clouddataservices/wp-content/uploads/sites/47/2015/06/cds_clouds_hero.png') no-repeat;
   background-position: center;
   border: none;
   height: 380px;
