--- a/css/styles_less.css
+++ b/css/styles_less.css
@@ -169,7 +169,7 @@ nav.navbar #menu-main li.current-menu-item {
   }
 }
 #hero-text {
-  background: #262324 url('http://developer.ibm.com/clouddataservices/wp-content/uploads/sites/47/2015/06/cds_clouds_hero.png') no-repeat;
+  background: #231f20 url('http://developer.ibm.com/clouddataservices/wp-content/uploads/sites/47/2015/06/cds_clouds_hero.png') no-repeat;
   background-position: center;
   border: none;
   height: 380px;
